--- a/TODO.txt
+++ b/TODO.txt
@@ -9,3 +9,7 @@ Need to Compute depths of cells and add depth as an ordinate variables
 
 Would like to restructure as a module that can be loaded instead of one long script full of defs, was having trouble doing this and using Spyder at the same time - unresolved spyder path issues.
 
+It is possible for the 5th beam of a V to have a different number of cells.  This is trapped, but not dealt with, in the code.  In this case 5th beam data will nto be output.
+
+There may be a case where there is only wave data in a Velocity output file.  THe program will probably not handle this well.
+
