tested and checked paths in the jupyter-notebook demo

--- a/demo/Example of converting a pd0 file.ipynb
+++ b/demo/Example of converting a pd0 file.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "An example of how to use this module"
    ]
@@ -18,6 +21,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "# change this to where ever you have put this module\n",
     "sys.path.append('c:\\projects\\python\\ADCPy')"
    ]
   },
@@ -47,12 +51,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\projects\\python\\ADCPy\\examplesources\\currentsV.pd0\n"
+      "currentsV.pd0\n"
      ]
     }
    ],
    "source": [
-    "pd0File = 'C:\\projects\\python\\ADCPy\\examplesources\\currentsV.pd0'\n",
+    "pd0File = 'currentsV.pd0'\n",
     "print(pd0File)\n"
    ]
   },
@@ -80,7 +84,7 @@
       "{'headerID': 127, 'sourceID': 127, 'nbytesperens': 1978, 'ndatatypes': 15, 'offsets': [36, 95, 160, 176, 210, 226, 756, 1022, 1288, 1554, 1594, 1728, 1796, 1864, 1932]}\n",
       "ensemble length = 1980\n",
       "estimating 3186.09 ensembles in file\n",
-      "data found in file  C:\\projects\\python\\ADCPy\\examplesources\\currentsV.pd0\n",
+      "data found in file  currentsV.pd0\n",
       "CData : [[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
       "  0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
       " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
