--- a/EPICexamples/Check file times.ipynb
+++ b/EPICexamples/Check file times.ipynb
@@ -9,17 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "datapath = 'E:\\\\data\\\\Sandwich\\\\10811_V20784\\\\processed201809scaled\\\\'\n",
-    "fileroot = '10811whVwave_'"
+    "#datapath = 'E:\\\\data\\\\Sandwich\\\\10811_V20784\\\\processed201809scaled\\\\'\n",
+    "#fileroot = '10811whVwave_'+'*.cdf'\n",
+    "fileroot = '10811whVwave_*p-cal.nc'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,69 +36,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['E:\\\\data\\\\Sandwich\\\\10811_V20784\\\\processed201809scaled\\\\10811whVwave_01.cdf',\n",
-       " 'E:\\\\data\\\\Sandwich\\\\10811_V20784\\\\processed201809scaled\\\\10811whVwave_02.cdf',\n",
-       " 'E:\\\\data\\\\Sandwich\\\\10811_V20784\\\\processed201809scaled\\\\10811whVwave_03.cdf',\n",
-       " 'E:\\\\data\\\\Sandwich\\\\10811_V20784\\\\processed201809scaled\\\\10811whVwave_04.cdf',\n",
-       " 'E:\\\\data\\\\Sandwich\\\\10811_V20784\\\\processed201809scaled\\\\10811whVwave_05.cdf',\n",
-       " 'E:\\\\data\\\\Sandwich\\\\10811_V20784\\\\processed201809scaled\\\\10811whVwave_06.cdf']"
+       "['E:\\\\data\\\\Sandwich\\\\10811_V20784\\\\processed201809scaled\\\\10811whVwave_01p-cal.nc',\n",
+       " 'E:\\\\data\\\\Sandwich\\\\10811_V20784\\\\processed201809scaled\\\\10811whVwave_02p-cal.nc',\n",
+       " 'E:\\\\data\\\\Sandwich\\\\10811_V20784\\\\processed201809scaled\\\\10811whVwave_03p-cal.nc',\n",
+       " 'E:\\\\data\\\\Sandwich\\\\10811_V20784\\\\processed201809scaled\\\\10811whVwave_04p-cal.nc',\n",
+       " 'E:\\\\data\\\\Sandwich\\\\10811_V20784\\\\processed201809scaled\\\\10811whVwave_05p-cal.nc',\n",
+       " 'E:\\\\data\\\\Sandwich\\\\10811_V20784\\\\processed201809scaled\\\\10811whVwave_06p-cal.nc',\n",
+       " 'E:\\\\data\\\\Sandwich\\\\10811_V20784\\\\processed201809scaled\\\\10811whVwave_p-cal.nc']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "files = glob.glob(datapath+fileroot+'*.cdf')\n",
+    "files = glob.glob(datapath+fileroot)\n",
     "files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10811whVwave_01.cdf \n",
-      "\tCF time starts at 2016-12-15 23:59:22 and ends at 2017-01-11 15:59:22\n",
-      "\t86362000 <class 'numpy.int32'>\n",
-      "\tEPIC time starts at 2017-09-17 23:59:22 and ends at 2017-01-11 15:59:21.990000\n",
-      "\t(2048, 641), seconds since 2016-12-15 23:59:22.000000 0:00\n",
-      "10811whVwave_02.cdf \n",
-      "\tCF time starts at 2017-01-11 16:59:22.500000 and ends at 2017-02-07 08:59:22\n",
-      "\t61162499 <class 'numpy.int32'>\n",
-      "\tEPIC time starts at 2017-01-11 16:59:22.490000 and ends at 2017-02-07 08:59:22\n",
-      "\t(2048, 641), seconds since 2016-12-15 23:59:22.000000 0:00\n",
-      "10811whVwave_03.cdf \n",
-      "\tCF time starts at 2017-02-07 09:59:22 and ends at 2017-03-06 01:59:22.500000\n",
-      "\t35961999 <class 'numpy.int32'>\n",
-      "\tEPIC time starts at 2017-02-07 09:59:21.990000 and ends at 2017-12-06 01:59:22.490000\n",
-      "\t(2048, 641), seconds since 2016-12-15 23:59:22.000000 0:00\n",
-      "10811whVwave_04.cdf \n",
-      "\tCF time starts at 2017-03-06 02:59:22 and ends at 2017-04-01 18:59:22\n",
-      "\t10762000 <class 'numpy.int32'>\n",
-      "\tEPIC time starts at 2017-12-06 02:59:22 and ends at 2018-01-01 18:59:21.990000\n",
-      "\t(2048, 641), seconds since 2016-12-15 23:59:22.000000 0:00\n",
-      "10811whVwave_05.cdf \n",
-      "\tCF time starts at 2017-04-01 19:59:22.500000 and ends at 2017-04-28 11:59:22\n",
-      "\t71962499 <class 'numpy.int32'>\n",
-      "\tEPIC time starts at 2018-01-01 19:59:22.490000 and ends at 2018-01-28 11:59:22\n",
-      "\t(2048, 641), seconds since 2016-12-15 23:59:22.000000 0:00\n",
-      "10811whVwave_06.cdf \n",
-      "\tCF time starts at 2017-04-28 12:59:22 and ends at 2017-05-25 04:59:23\n",
-      "\t46761999 <class 'numpy.int32'>\n",
-      "\tEPIC time starts at 2018-01-28 12:59:21.990000 and ends at 2018-02-25 04:59:23\n",
-      "\t(2048, 641), seconds since 2016-12-15 23:59:22.000000 0:00\n"
+      "10811whVwave_01p-cal.nc\n",
+      "\tEPIC time starts at 2016-12-15 23:59:22 and ends at 2017-01-11 15:59:21.990000\n",
+      "\t2457738 <class 'numpy.ma.core.MaskedArray'>\n",
+      "10811whVwave_02p-cal.nc\n",
+      "\tEPIC time starts at 2017-01-11 16:59:23 and ends at 2017-02-07 08:59:22\n",
+      "\t2457765 <class 'numpy.ma.core.MaskedArray'>\n",
+      "10811whVwave_03p-cal.nc\n",
+      "\tEPIC time starts at 2017-02-07 09:59:21.990000 and ends at 2017-03-06 01:59:23\n",
+      "\t2457792 <class 'numpy.ma.core.MaskedArray'>\n",
+      "10811whVwave_04p-cal.nc\n",
+      "\tEPIC time starts at 2017-03-06 02:59:22 and ends at 2017-04-01 18:59:21.990000\n",
+      "\t2457819 <class 'numpy.ma.core.MaskedArray'>\n",
+      "10811whVwave_05p-cal.nc\n",
+      "\tEPIC time starts at 2017-04-01 19:59:23 and ends at 2017-04-28 11:59:22\n",
+      "\t2457845 <class 'numpy.ma.core.MaskedArray'>\n",
+      "10811whVwave_06p-cal.nc\n",
+      "\tEPIC time starts at 2017-04-28 12:59:21.990000 and ends at 2017-05-25 04:59:23\n",
+      "\t2457872 <class 'numpy.ma.core.MaskedArray'>\n",
+      "10811whVwave_p-cal.nc\n",
+      "\tEPIC time starts at 2016-12-15 23:59:22 and ends at 2017-05-25 04:59:23\n",
+      "\t2457738 <class 'numpy.ma.core.MaskedArray'>\n"
      ]
     }
    ],
@@ -107,20 +100,53 @@
     "    #ds = xr.open_dataset(file)\n",
     "    \n",
     "    fileparts = file.split('\\\\')\n",
-    "    tunits = cdf['time'].units\n",
-    "    print('{} \\n\\tCF time starts at {} and ends at {}'.format(fileparts[-1],\n",
-    "        num2date(cdf['time'][0][0],cdf['time'].units),\n",
-    "        num2date(cdf['time'][0][-1],cdf['time'].units)))\n",
-    "    print('\\t{} {}'.format(cdf['EPIC_time2'][0][0],type(cdf['EPIC_time2'][0][0])))\n",
-    "    g, EPICstart = ep2dt([cdf['EPIC_time'][0][0]],[cdf['EPIC_time2'][0][0]])\n",
-    "    g, EPICend = ep2dt([cdf['EPIC_time'][0][-1]],[cdf['EPIC_time2'][0][-1]])\n",
-    "    print('\\tEPIC time starts at {} and ends at {}'.format(EPICstart[0], EPICend[0]))\n",
-    "    print('\\t{}, {}'.format(cdf['time'].shape,tunits))\n",
+    "    print(fileparts[-1])\n",
     "    \n",
+    "    tunits = cdf['time'].units\n",
+    "    if tunits != \"True Julian Day\":\n",
+    "        # CF time is in time\n",
+    "        CFtimeobj = cdf['time']\n",
+    "        CFstart = num2date(CFtimeobj[0][0],CFtimeobj.units)\n",
+    "        CFend = num2date(CFtimeobj[0][-1],CFtimeobj.units)\n",
+    "        print('\\tCF time starts at {} and ends at {}'.format(CFstart, CFend))\n",
+    "        print('\\t{}, {}'.format(CFtimeobj.shape,tunits))\n",
+    "    \n",
+    "    if tunits != \"True Julian Day\":\n",
+    "        EPICtimeobj = cdf['EPIC_time']\n",
+    "        EPICtime2obj = cdf['EPIC_time2']\n",
+    "        g, EPICstart = ep2dt([EPICtimeobj[0][0]],[EPICtime2obj[0][0]])\n",
+    "        g, EPICend = ep2dt([EPICtimeobj[0][-1]],[EPICtime2obj[0][-1]])\n",
+    "        print('\\tEPIC time starts at {} and ends at {}'.format(EPICstart[0], EPICend[0]))\n",
+    "        print('\\t{} {}'.format(EPICtimeobj[0][0],type(EPICtimeobj[0][0])))\n",
+    "    else: \n",
+    "        EPICtimeobj = cdf['time']\n",
+    "        EPICtime2obj = cdf['time2']\n",
+    "        if len(EPICtimeobj.shape) == 2:\n",
+    "            g, EPICstart = ep2dt([EPICtimeobj[0][0]],[EPICtime2obj[0][0]])\n",
+    "            g, EPICend = ep2dt([EPICtimeobj[0][-1]],[EPICtime2obj[0][-1]])\n",
+    "            print('\\tEPIC time starts at {} and ends at {}'.format(EPICstart[0], EPICend[0]))\n",
+    "            print('\\t{} {}'.format(EPICtimeobj[0][0],type(EPICtimeobj[0][0])))\n",
+    "        else:\n",
+    "            g, EPICstart = ep2dt([EPICtimeobj[0]],[EPICtime2obj[0]])\n",
+    "            g, EPICend = ep2dt([EPICtimeobj[-1]],[EPICtime2obj[-1]])\n",
+    "            print('\\tEPIC time starts at {} and ends at {}'.format(EPICstart[0], EPICend[0]))\n",
+    "            print('\\t{} {}'.format(EPICtimeobj[0],type(EPICtimeobj[0])))\n",
+    "\n",
+    "\n",
+    "    if tunits != \"True Julian Day\":\n",
+    "        print('\\tdifferences: start {} end {}'.format(CFstart-EPICstart[0],CFend-EPICend[0]))\n",
+    "        \n",
     "    cdf.close()\n",
     "    \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
